--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.tsx",
   "scripts": {
     "start": "NODE_ENV=production http-server ./dist",
-    "dev": "webpack-dev-server --mode=development --hot --stats-children --open",
+    "dev": "webpack-dev-server --mode=development --hot --open",
     "build": "webpack",
     "build:dev": "webpack --mode=development",
     "build:prod": "NODE_ENV=production webpack --mode=production --node-env=production",
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
+    "react-router-dom": "^6.22.3",
     "typescript": "^5.4.2"
   },
   "devDependencies": {
