--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "format": "prettier --write \"**/*.+(js|jsx|ts|tsx|json|css|scss|md)\""
   },
   "dependencies": {
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
     "react-router-dom": "^6.22.3",
+    "sort-by": "^1.2.0",
     "typescript": "^5.4.2"
   },
   "devDependencies": {
