--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
+    "react-dnd": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
     "react-router-dom": "^6.22.3",
-    "sort-by": "^1.2.0",
+    "sort-by": "^0.0.2",
     "typescript": "^5.4.2"
   },
   "devDependencies": {
