--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
     "react-router-dom": "^6.22.3",
+    "react-timezone-select": "^3.2.3",
     "sort-by": "^0.0.2",
     "typescript": "^5.4.2"
   },
