--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,8 @@
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
     "plugin:react/recommended",
-    "prettier"
+    "prettier",
+    "plugin:storybook/recommended"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
@@ -19,7 +20,12 @@
       "version": "detect"
     }
   },
-  "ignorePatterns": ["webpack.config.js"],
-  "plugins": ["@typescript-eslint", "react"],
+  "ignorePatterns": [
+    "webpack.config.js"
+  ],
+  "plugins": [
+    "@typescript-eslint",
+    "react"
+  ],
   "rules": {}
 }
