--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,7 +20,7 @@
       "version": "detect"
     }
   },
-  "ignorePatterns": ["webpack.config.js", "storybook-static"],
+  "ignorePatterns": ["webpack.config.js", "storybook-static", "build"],
   "plugins": ["@typescript-eslint", "react"],
   "rules": {}
 }
