--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   },
   "dependencies": {
     "classnames": "^2.5.1",
-    "firebase": "^10.12.1",
+    "dotenv": "^16.4.5",
+    "firebase": "^10.12.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
+    "process": "^0.11.10",
     "react": "^18.2.0",
     "react-calendar": "^5.0.0",
     "react-dnd": "^16.0.1",
@@ -72,7 +74,7 @@
     "style-loader": "^3.3.4",
     "ts-loader": "^9.5.1",
     "url-loader": "^4.1.1",
-    "webpack": "^5.90.3",
+    "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.2"
   }
