--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.4.2",
     "classnames": "^2.5.1",
     "dotenv": "^16.4.5",
     "firebase": "^10.12.2",
@@ -31,7 +32,8 @@
     "react-router-dom": "^6.22.3",
     "react-timezone-select": "^3.2.3",
     "sort-by": "^0.0.2",
-    "typescript": "^5.4.2"
+    "typescript": "^5.4.2",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.23.9",
