--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,8 @@
 {
-  "presets": ["@babel/env", "@babel/react", "@babel/preset-typescript"],
+  "presets": [
+    "@babel/env",
+    ["@babel/react", { "runtime": "automatic" }],
+    "@babel/preset-typescript"
+  ],
   "targets": { "node": "current" }
 }
