--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,5 +22,11 @@
   },
   "ignorePatterns": ["webpack.config.js", "storybook-static", "build"],
   "plugins": ["@typescript-eslint", "react"],
-  "rules": {}
+  "rules": {
+    "react/react-in-jsx-scope": "off",
+    "react/jsx-filename-extension": [
+      1,
+      { "extensions": [".js", ".jsx", ".tsx"] }
+    ]
+  }
 }
