--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.tsx",
+  "license": "MIT",
   "scripts": {
     "start": "NODE_ENV=production http-server ./dist",
     "dev": "webpack-dev-server --mode=development --hot --open",
@@ -30,7 +31,8 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
     "react-router-dom": "^6.22.3",
-    "react-timezone-select": "^3.2.3",
+    "react-select": "^5.8.0",
+    "react-timezone-select": "^3.2.5",
     "sort-by": "^0.0.2",
     "typescript": "^5.4.2",
     "yup": "^1.4.0"
@@ -42,6 +44,9 @@
     "@babel/preset-react": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
     "@chromatic-com/storybook": "^1.3.2",
+    "@eslint/compat": "^1.1.1",
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.7.0",
     "@storybook/addon-essentials": "^8.0.8",
     "@storybook/addon-interactions": "^8.0.8",
     "@storybook/addon-links": "^8.0.8",
@@ -53,6 +58,17 @@
     "@storybook/react": "^8.0.8",
     "@storybook/react-webpack5": "^8.0.8",
     "@storybook/test": "^8.0.8",
+    "@types/babel__core": "^7.20.5",
+    "@types/babel__generator": "^7.6.8",
+    "@types/babel__template": "^7.4.4",
+    "@types/babel__traverse": "^7.20.6",
+    "@types/bonjour": "^3.5.13",
+    "@types/connect": "^3.4.38",
+    "@types/emscripten": "^1.39.13",
+    "@types/estree": "^1.0.5",
+    "@types/hast": "^3.0.4",
+    "@types/json-schema": "^7.0.15",
+    "@types/mdx": "^2.0.13",
     "@types/react": "^18.2.65",
     "@types/react-dom": "^18.2.21",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
@@ -60,11 +76,12 @@
     "babel-loader": "^9.1.3",
     "browser": "^0.2.6",
     "css-loader": "^6.11.0",
-    "eslint": "^8.57.0",
+    "eslint": "^9.7.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-react": "^7.34.0",
+    "eslint-plugin-react": "^7.34.4",
     "eslint-plugin-storybook": "^0.8.0",
     "file-loader": "^6.2.0",
+    "globals": "^15.8.0",
     "html-webpack-plugin": "5.6.0",
     "husky": "^9.0.11",
     "node-sass": "9.0.0",
