--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-router-dom": "^6.22.3",
     "react-select": "^5.8.0",
     "react-timezone-select": "^3.2.5",
+    "react-toastify": "^10.0.5",
     "sort-by": "^0.0.2",
     "typescript": "^5.4.2",
     "yup": "^1.4.0"
