--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.4.2",
     "classnames": "^2.5.1",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "firebase": "^10.12.2",
     "localforage": "^1.10.0",
